--- a/httpcore-osgi/pom.xml
+++ b/httpcore-osgi/pom.xml
@@ -26,7 +26,7 @@
  --><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.apache.httpcomponents</groupId>
+    <groupId>io.sealights.httpcomponents</groupId>
     <artifactId>httpcomponents-core</artifactId>
    <version>4.4.1001</version>
   </parent>
@@ -46,19 +46,19 @@
   </properties>
   <dependencies>
     <dependency>
-      <groupId>org.apache.httpcomponents</groupId>
+      <groupId>io.sealights.httpcomponents</groupId>
       <artifactId>httpcore</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
-        <groupId>org.apache.httpcomponents</groupId>
+        <groupId>io.sealights.httpcomponents</groupId>
         <artifactId>httpcore</artifactId>
         <version>${project.version}</version>
         <type>test-jar</type>
         <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.apache.httpcomponents</groupId>
+      <groupId>io.sealights.httpcomponents</groupId>
       <artifactId>httpcore-nio</artifactId>
       <version>${project.version}</version>
     </dependency>
