--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
  -->
  <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.apache.httpcomponents</groupId>
+  <groupId>io.sealights.httpcomponents</groupId>
   <artifactId>httpcomponents-core</artifactId>
   <name>Apache HttpComponents Core</name>
   <version>4.4.1001</version>
